--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Mission to Mars</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      </head>
 
+      <body>
+        <div class="container-fluid">
+          <div class="jumbotron text-center">
+            <h1>Mission to Mars</h1>
+            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+          </div>
+        
+        <h1>{{Latest_title}}</h1>
+        <p>{{Latest_desc}}</p>
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6"><h2>Featured Mars Image</h2><br><img src="{{Featured_image}}" width = '100%'></div>
+                <div class="col-md-6"><h3>Mars Facts</h3><br>{{Mars_stats_table|safe}}</div>
+            </div>
+        <div class="row">
+            <h3 class="text-center">Mars Hemispheres</h3>
+            <div class="col-md-3"><img src="{{cerberus_img}}""> <br> <h2>Cerberus Image Enhanced</h2></div>
+            <div class="col-md-3"><img src="{{schiaparelli_img}}"> <br> <h2>Schiaparelli Image Enhanced</h2></div>
+            <div class="col-md-3"><img src="{{syrtis_img}}"> <br> <h2>Syrtis Image Enhanced</h2></div>
+            <div class="col-md-3"><img src="{{valles_img}}"> <br> <h2>Valles Marineris Image Enhanced</h2></div>
+        </div>
+        </div>
+      </body>
+    
+</html>
